# spin-trigger-cron

./: Cargo.toml  spin-pluginify.toml
.github/workflows/: build.yaml
guest-python/: spin.toml
guest-rust/: Cargo.toml  spin.toml
sdk/: Cargo.toml
sdk/macro/src/: lib.rs
src/: lib.rs
templates/cron-rust/content/: Cargo.toml.tmpl  spin.toml
templates/cron-rust/metadata/snippets/: component.txt
