[package]
name = "trigger-cron"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.73"

[workspace.package]
version = "0.2.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
rust-version = "1.82"

[workspace]
members = ["sdk", "sdk/macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.2.0" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.2.0" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.2.0" }
tokio = { version = "1.37", features = ["full"] }
tokio-cron-scheduler = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
wasmtime = { version = "29.0.1" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
wit-bindgen = "0.16.0"
